--- a/css/style.scss
+++ b/css/style.scss
@@ -383,11 +383,11 @@ main {
 
             &#o {
                 @include screen-size(small) {
-                    // background-image: url("../images/-thumbnail-small.webp");
+                    background-image: url("../images/motors-thumbnail-small.webp");
                 }
 
                 @include screen-size(medium) {
-                    // background-image: url("../images/-thumbnail.webp");
+                    background-image: url("../images/motors-thumbnail.webp");
                 }
 
             }
