Updated resume and transcripts

--- a/css/style.scss
+++ b/css/style.scss
@@ -525,6 +525,11 @@ main {
     }
 }
 
+.document {
+    width: 100%;
+    height: 85vh;
+}
+
 footer {
     width: 100%;
     background-color: $element-bg;
