--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,11 @@ main .letter#s {
   grid-row: 2;
 }
 
+.document {
+  width: 100%;
+  height: 85vh;
+}
+
 footer {
   width: 100%;
   background-color: #0f0e0e;
